kubernetes/homelab/applications/pentesting/webcheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  webcheck
  namespace: pentesting
  labels:
    app:  web-check
spec:
  selector:
    matchLabels:
      app: web-check
  replicas: 1
  template:
    metadata:
      labels:
        app:  web-check
    spec:
      containers:
      - name:  web-check
        image:  lissy93/web-check@sha256:2b4ee0a63f6e5cf12c96dd5b123fff488b40410b99f43f08a6e24bc8460531fa
        resources:
          requests:
            cpu: 80m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 150Mi
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  3000
          name:  http
      restartPolicy: Always
