kubernetes/homelab/applications/pentesting/webcheck-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webcheck-route
  namespace: pentesting
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "webcheck.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: webcheck
        port: 3000
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
